# openclaw-instagram-agent

./: .env.example  .gitignore  AGENTS.md  BOOT.md  CLAUDE.md  CONFIG.md  Dockerfile  HEARTBEAT.md  Makefile  README.md  SOUL.md  TOOLS.md  check_posts.py  docker-compose.yml  engage_and_comment.py  pyproject.toml  run_engage.py
.archgate/adrs/: ARCH-001-api-first-browser-fallback.md  ARCH-002-human-like-rate-limiting.md  ARCH-003-env-only-configuration.md  ARCH-004-zero-install-execution.md  ARCH-005-pipeline-assured-quality.md  ARCH-006-human-approval-for-text.md
.github/workflows/: ci.yml
.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json
scripts/: engage.sh  run.sh  test.sh
skills/: engagement_analyze.json  engagement_analyze.md  engagement_analyze.py
spec/: API.md  ARCHITECTURE.md  COMMUNICATION.md  CRON.md  LEARNINGS.md  PIPELINES.md  SAFETY.md  TESTING.md  TROUBLESHOOTING.md
src/openclaw_instagram/: __init__.py  agent.py  cli.py  config.py
src/openclaw_instagram/api/: client.py
src/openclaw_instagram/browser/: fallback.py
src/openclaw_instagram/utils/: human_delay.py  iamq.py  logging.py  telegram.py
tests/: conftest.py  test_agent.py  test_agent_comprehensive.py  test_api_client.py  test_api_client_comprehensive.py  test_browser_fallback.py  test_cli.py  test_config.py  test_human_delay.py  test_iamq.py  test_iamq_comprehensive.py  test_logging_utils.py  test_pipeline.py  test_pipeline_steps.py  test_telegram.py
tools/pipeline_runner/: __init__.py  cli.py  engine.py  pipelines.py  steps.py
(+1 files in other folders)
